--- a/WebServer/pom.xml
+++ b/WebServer/pom.xml
@@ -7,6 +7,13 @@
     <groupId>edu.depaul.se435</groupId>
     <artifactId>WebServer</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.5</version>
+        </dependency>
+    </dependencies>
     <packaging>jar</packaging>
 
     <name>WebServer</name>
